# gateway-api-migration-demo

./: .gitignore  LICENSE  README.md  Taskfile.yml  pyproject.toml
docs/: step-by-step.md
docs/labs/: README.md  lab-00-setup.md  lab-01-nginx-migration.md  lab-02-alb-migration.md  lab-03-demo-scenarios.md
docs/plans/: plan.md  spec.md
manifests/01-app/: cart.yaml  namespace.yaml  products-v1.yaml  products-v2.yaml
manifests/02-ingress-nginx/: ingress.yaml
manifests/03-ingress-alb/: ingress.yaml
manifests/04-gateway-api/: gateway-class.yaml  gateway.yaml  httproute-cart.yaml  httproute-products.yaml  reference-grant.yaml
manifests/05-migration/: README.md  alb-mapping.yaml  nginx-converted.yaml
scripts/: migrate-alb.sh  migrate-nginx.sh  setup.sh  teardown.sh
services/cart/: Dockerfile  pyproject.toml
services/cart/cart/: config.py  data.py  main.py
services/products-v1/: .dockerignore  Dockerfile  pyproject.toml
services/products-v1/products_v1/: config.py  data.py  main.py
services/products-v2/: Dockerfile  pyproject.toml
services/products-v2/products_v2/: config.py  data.py  main.py
terraform/: main.tf  outputs.tf  variables.tf  versions.tf
tests/e2e/: conftest.py  test_cross_namespace.py  test_gateway_api.py  test_header_routing.py  test_ingress_alb.py  test_ingress_nginx.py  test_traffic_split.py
tests/unit/: test_cart.py  test_products_v1.py  test_products_v2.py
